src/plugins/clangcodemodel/clangmodelmanagersupport.h
@@ -32,6 +32,7 @@
 
 #include <utils/id.h>
 
+#include <QFutureSynchronizer>
 #include <QObject>
 
 #include <memory>
@@ -134,6 +135,7 @@ private:
     std::unique_ptr<CppTools::RefactoringEngineInterface> m_refactoringEngine;
 
     QHash<ProjectExplorer::Project *, ClangProjectSettings *> m_projectSettings;
+    QFutureSynchronizer<void> m_generatorSynchronizer;
 };
 
 class ClangModelManagerSupportProvider : public CppTools::ModelManagerSupportProvider
